--- a/FrågesportUppgift/MainPage.xaml
+++ b/FrågesportUppgift/MainPage.xaml
@@ -8,8 +8,11 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid RenderTransformOrigin="0.508,0.459">
-        <TextBlock HorizontalAlignment="Center" Margin="0 250 0 0" Name="qBox">Frågetext här</TextBlock>
-        <TextBox x:Name="textBox" HorizontalAlignment="Center" Text="TestBox" TextWrapping="Wrap" VerticalAlignment="Center"/>
+    <Grid>
+        <TextBlock HorizontalAlignment="Center" Height="20" Margin="0 -235 0 0" FontSize="13" Name="scoreBox">Poäng här</TextBlock>
+        <TextBlock HorizontalAlignment="Center" Height="20" Margin="0 -200 0 0" Name="qBox">Frågetext här</TextBlock>
+        <Button Name="a1" Click="a1_Click" HorizontalAlignment="Center" MaxWidth="200" Width="150" Margin="0 -100 0 0">Svar 1</Button>
+        <Button Name="a2" Click="a2_Click" HorizontalAlignment="Center" MaxWidth="200" Width="150" Margin="0 0 0 0">Svar 2</Button>
+        <Button Name="a3" Click="a3_Click" HorizontalAlignment="Center" MaxWidth="200" Width="150" Margin="0 100 0 0">Svar 3</Button>
     </Grid>
 </Page>
