--- a/FrågesportUppgift/MainPage.xaml
+++ b/FrågesportUppgift/MainPage.xaml
@@ -8,7 +8,9 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    
     <Grid>
+        <TextBlock HorizontalAlignment="Center" Height="30" Margin="0 -290 0 0" FontSize="18">Frågesport Deluxe</TextBlock>
         <TextBlock HorizontalAlignment="Center" Height="20" Margin="0 -235 0 0" FontSize="13" Name="scoreBox">Poäng här</TextBlock>
         <TextBlock HorizontalAlignment="Center" Height="20" Margin="0 -200 0 0" Name="qBox">Frågetext här</TextBlock>
         <Button Name="a1" Click="a1_Click" HorizontalAlignment="Center" MaxWidth="200" Width="150" Margin="0 -100 0 0">Svar 1</Button>
