--- a/FrågesportUppgift/MainPage.xaml
+++ b/FrågesportUppgift/MainPage.xaml
@@ -7,10 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="#5B5DA3">
-
+    
 
     <Grid>
-        <TextBlock Foreground="#FFF" HorizontalAlignment="Center" Height="30" Margin="0 -290 0 0" FontSize="18">Frågesport Deluxe</TextBlock>
+        <TextBlock x:Uid="headerBox2" Name="headerBox" Foreground="#FFF" HorizontalAlignment="Center" Height="30" Margin="0 -290 0 0" FontSize="18"/>
         <TextBlock Foreground="#FFF" HorizontalAlignment="Center" Height="20" Margin="0 -235 0 0" FontSize="13" Name="scoreBox">Poäng här</TextBlock>
         <TextBlock Foreground="#FFF" HorizontalAlignment="Center" Height="20" Margin="0 -200 0 0" Name="qBox">Frågetext här</TextBlock>
         <Button Background="#45477C" Foreground="#FFF" Name="a1" Click="a1_Click" HorizontalAlignment="Center" MaxWidth="200" Width="150" Margin="0 -100 0 0">Svar 1</Button>
